apps/littlewardrobe/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: littlewardrobe
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - littlewardrobe.fruitiex.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: littlewardrobe
          port: 8080
      timeouts:
        request: 0s
